--- a/app/ui/styles/nav-links.css
+++ b/app/ui/styles/nav-links.css
@@ -5,6 +5,9 @@ nav {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    width: 100%;
+    height: 100%;
+    user-select: none;
 }
 nav div {
     display: flex;
@@ -12,14 +15,15 @@ nav div {
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 90%;
+    height: 100%;
 }
 nav>div>ul {
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
+    align-items: left;
+    align-content: flex-start;
     overflow: auto;
     flex-wrap: wrap;
     height: 100%;
@@ -30,8 +34,9 @@ nav>div>ul {
 nav>div>ul>li {
     position: relative;
     flex-shrink: 1;
-    width: 30%;
-    height: 30%;
+    max-width: 5em;
+    max-height: 5em;
+    margin: 1em;
 }
 nav>div>ul>li a {
     position: relative;
@@ -39,9 +44,6 @@ nav>div>ul>li a {
     flex-direction: column;
     width: 100%;
     height: 100%;
-}
-nav>div:first-of-type {
-    height: 10%;
 }
 
 nav span.selected {
