--- a/app/ui/styles/3dworld.css
+++ b/app/ui/styles/3dworld.css
@@ -1,9 +1,10 @@
-#div3dworld {
-    position: relative;
+#3dworld {
+    width: 100%;
+    height: 100%;
+    position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
-    width: 100%;
+    z-index: 0;
 }
 #3dworld {
     position: absolute;
