--- a/app/ui/styles/window.css
+++ b/app/ui/styles/window.css
@@ -68,7 +68,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: auto;
+    height: calc(100% - 3em);
     background-color: var(--background-color);
     flex: 1;
     border-left: 5px solid var(--console-bar-color);
