--- a/app/ui/styles/folders.css
+++ b/app/ui/styles/folders.css
@@ -75,6 +75,33 @@
     flex: 1;
     border-left: 5px solid var(--folder-bar-color);
 }
+.folder>.folderMain>nav>div>ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+}
+
+.folder .folderMain nav div ul li{
+    margin: 0px;
+    padding: 0px;
+    min-height: 120px;
+    height: 100%;
+}
+
+.folder .folderMain nav div ul li a div{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+
+}
+
+.folderMain>nav>div>ul>li a div:hover{
+    background-color: rgba(34, 21, 112, 0.443);
+}
+/*
 .folderMain>a{
     display: flex;
     justify-content: center;
@@ -96,7 +123,13 @@
 .folderMain>a>div{
     background-color: blueviolet;
     color: white;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .folderMain>a>div>span{
     font-size: 20px;
-}
+}*/
